# knowledge-assistant

./: .editorconfig  .flake8  AGENT.md  LICENSE  README.md  RELEASE_NOTES.md  config.example.yaml  metadata-spec.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: python-test.yml
docs/: PRD.md  api-reference.md  quick-start.md  user-guide.md
examples/: README.md  basic-usage.py  config-example.yaml  organize-example.py  template-example.py
scripts/: __init__.py  config.py  metadata_parser.py  template_engine.py  types.py  utils.py
scripts/tools/: __init__.py  extract_keywords.py  extraction.py  generate_index.py  organize_notes.py
skills/knowledge-assistant/: SKILL.md
templates/: daily-note.md  knowledge-card.md  meeting-minutes.md  research-note.md  task-list.md
test-data/: README.md
test-data/examples/: edge_cases.md  invalid_yaml.md  missing_fields.md  valid_document.md
test-data/multi-language/: chinese_research.md  japanese_research.md  korean_research.md
test-data/performance/: large_document.md
tests/: __init__.py  conftest.py  edge_cases_test.py  integration_test_v1.py  test_config.py  test_example.py  test_extract_keywords.py  test_extraction.py  test_generate_index.py  test_metadata_parser.py  test_organize_notes.py  test_template_engine.py  test_template_integration.py  test_types.py  test_utils.py
